mv ci deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,10 @@
 language: java
 install: mvn -DskipTests -Dgpg.skip install
 after_success:
-- gpg --version
-- gpg2 --version
-- echo "PASSPHRASE start"
-- echo $PASSPHRASE
-- echo "$PASSPHRASE"
-- echo $TRAVIS_BUILD_DIR
-- echo "$TRAVIS_BUILD_DIR"
-- echo "PASSPHRASE end"
-- gpg2 --keyring=$TRAVIS_BUILD_DIR/pubring.gpg --no-default-keyring --import ci/signingkey.asc
-- gpg2 --allow-secret-key-import --keyring=$TRAVIS_BUILD_DIR//secring.gpg --no-default-keyring
-  --import ci/signingkey.asc
-- mvn clean deploy --settings ci/settings.xml -Dgpg.executable=gpg2 -Dgpg.keyname=5F84CD1775351968CABF0B0D779D2423E1D24D89
+- gpg2 --keyring=$TRAVIS_BUILD_DIR/pubring.gpg --no-default-keyring --import deployment/signingkey.asc
+- gpg2 --allow-secret-key-import --keyring=$TRAVIS_BUILD_DIR/secring.gpg --no-default-keyring
+  --import deployment/signingkey.asc
+- mvn clean deploy --settings deployment/settings.xml -Dgpg.executable=gpg2 -Dgpg.keyname=5F84CD1775351968CABF0B0D779D2423E1D24D89
   -Dgpg.passphrase=$PASSPHRASE -Dgpg.publicKeyring=$TRAVIS_BUILD_DIR/pubring.gpg -Dgpg.secretKeyring=$TRAVIS_BUILD_DIR/secring.gpg
 env:
   global:
